objects/QuotationInformation__c.object
<CustomObject>
    <fields>
        <fullName>AcceptanceDateTime__c</fullName>
        <description>Technical field always null used during the linkage from BaaN. (Used to update the Date field)</description>
        <label>検収日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AcceptanceDate__c</fullName>
        <label>検収日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AddressLine1__c</fullName>
        <label>住所（1）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2__c</fullName>
        <label>住所（2）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine3__c</fullName>
        <label>住所（3）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>AddressLine1__c + &apos; &apos; + AddressLine2__c + &apos; &apos; + AddressLine3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>住所</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addressee2__c</fullName>
        <label>宛名2</label>
        <picklist>
            <picklistValues>
                <fullName>御中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>様</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>殿</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Addressee__c</fullName>
        <label>宛名1</label>
        <picklist>
            <picklistValues>
                <fullName>御中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>様</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>殿</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BranchManagerApproval__c</fullName>
        <defaultValue>true</defaultValue>
        <label>支店長承認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BranchNo__c</fullName>
        <label>枝番</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BranchTelephoneFaxExpress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>支店連絡先出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalendarExpress__c</fullName>
        <description>和暦、西暦の表示選択</description>
        <label>暦表示</label>
        <picklist>
            <picklistValues>
                <fullName>和暦</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>西暦</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CommissionAmount__c</fullName>
        <label>口銭金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CommissionRate__c</fullName>
        <label>口銭率</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ConsumptionTaxAmount__c</fullName>
        <label>消費税額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ContractAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>契約先</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>見積書情報（契約先）</relationshipLabel>
        <relationshipName>ContractQuotationInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractAccount_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContractAccount_dummyField</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>見積書情報 (ContractAccount_dummyField)</relationshipLabel>
        <relationshipName>ContractAccount_dummyField</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractAddress__c</fullName>
        <label>契約先住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractBelong__c</fullName>
        <label>契約先所属</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractCode__c</fullName>
        <label>契約先コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractContact_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Visualforce画面にて検索ダイアログを出すためだけに使用。
値は入れないようにしてください。</description>
        <label>契約先担当者_検索ダイアログ用</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>見積書情報</relationshipLabel>
        <relationshipName>QuotationInformations_ContractContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractFax__c</fullName>
        <label>契約先FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContractName1__c</fullName>
        <label>契約先名称1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractName2__c</fullName>
        <label>契約先名称2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractName__c</fullName>
        <label>契約先名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPersonInCharge__c</fullName>
        <label>契約先担当者名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPhone__c</fullName>
        <label>契約先電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContractPost__c</fullName>
        <label>契約先役職</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPostalCode__c</fullName>
        <label>契約先郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractShortName__c</fullName>
        <label>契約先名（略称）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractUndergraduate__c</fullName>
        <label>契約先学部事業所</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDateFormula__c</fullName>
        <formula>IF ($RecordType.DeveloperName == &apos;BaaN&apos;, RegisterDate__c, DateValue(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>登録日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomReductionAmount1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>カスタム値引金額１</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomReductionAmount2__c</fullName>
        <label>カスタム値引金額２</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomReductionAmount3__c</fullName>
        <label>カスタム値引金額３</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomReductionName1__c</fullName>
        <defaultValue>&apos;特別出精値引&apos;</defaultValue>
        <label>カスタム値引名称１</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomReductionName2__c</fullName>
        <label>カスタム値引名称２</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomReductionName3__c</fullName>
        <label>カスタム値引名称３</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerExpress__c</fullName>
        <label>客先表示</label>
        <picklist>
            <picklistValues>
                <fullName>契約先</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>納入先</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerQuotationRequestedNo__c</fullName>
        <label>客先見積依頼No</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryCondition1__c</fullName>
        <label>受渡条件1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryCondition2__c</fullName>
        <description>受渡条件テキスト2つ目</description>
        <label>受渡条件2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryDate_Arbitrarily__c</fullName>
        <label>納入期日(適宜)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryDeadlineTime__c</fullName>
        <description>Technical field always null used during the linkage from BaaN. (Used to update the Date field)</description>
        <label>納入期限</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeliveryDeadline__c</fullName>
        <label>納入期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryLocationSection__c</fullName>
        <label>受渡場所区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeliveryLocationText__c</fullName>
        <description>受渡場所区分の入力欄</description>
        <label>受渡場所テキスト</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>御下命後、納入までの月数</description>
        <label>納入期日(月数)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DepartmentCode__c</fullName>
        <label>部署コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentName__c</fullName>
        <label>部署名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DepartmentOutput__c</fullName>
        <defaultValue>false</defaultValue>
        <description>部署名表示非表示設定</description>
        <label>出力部署</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DestinationAccountCode__c</fullName>
        <label>送付案内 指定宛先コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationAccountName__c</fullName>
        <label>送付案内 指定宛先名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationAddress__c</fullName>
        <label>送付案内 住所</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationBelong__c</fullName>
        <label>送付案内 所属</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationGuideDate__c</fullName>
        <label>送付案内日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DestinationGuideSubject__c</fullName>
        <label>送付案内 件名</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DestinationNameTitle__c</fullName>
        <label>送付案内 敬称</label>
        <picklist>
            <picklistValues>
                <fullName>御中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>様</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>殿</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DestinationName__c</fullName>
        <label>送付案内 氏名</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationPersonInCharge__c</fullName>
        <label>送付案内 担当</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationPostalCode__c</fullName>
        <label>送付案内 郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DestinationUndergraduate__c</fullName>
        <label>送付案内 学部事業所</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectSalesExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>直販証明書　出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DirectSalesSheetIssueDate__c</fullName>
        <label>直販証明書　発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimateRequestDateExpress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>見積依頼日出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupLeaderApproval__c</fullName>
        <defaultValue>true</defaultValue>
        <label>グループ長確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GuideSheetPrint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>送付案内 出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoshuShurui__c</fullName>
        <label>保守種類</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HyomenNebikiRitsu__c</fullName>
        <formula>IF(OR(ISNULL(Subtitle__c), Subtitle__c == 0), 0, (CustomReductionAmount1__c + CustomReductionAmount2__c + CustomReductionAmount3__c) / Subtitle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>表面値引率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsModificationFinished__c</fullName>
        <formula>(NOW() - LastModifiedDate) * 24 * 60 &gt; 15</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsModificationFinished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrintable__c</fullName>
        <formula>NOT(
  OR (
    ISNULL(TotalTaxAmount__c),
    ISNULL(TotalAmount__c),
    ISNULL(SubtotalReductionAmount2__c),
    ISNULL(SubtotalReductionAmount1__c),
    ISNULL(Subtitle__c),
    ISNULL(TaxRate__c),
    ISNULL(ConsumptionTaxAmount__c)
  )
)</formula>
        <label>印刷可能</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueDateTime__c</fullName>
        <description>Technical field always null used during the linkage from BaaN. (Used to update the Date field)</description>
        <label>発行日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IssueDate__c</fullName>
        <label>発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeikaNensu__c</fullName>
        <label>経過年数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeiyakuEndDateTime__c</fullName>
        <description>Technical field always null used during the linkage from BaaN. (Used to update the Date field)</description>
        <label>契約終了日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KeiyakuEndDate__c</fullName>
        <label>契約終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KeiyakuStartDateTime__c</fullName>
        <description>Technical field always null used during the linkage from BaaN. (Used to update the Date field)</description>
        <label>契約開始日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KeiyakuStartDate__c</fullName>
        <label>契約開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkageStatus__c</fullName>
        <label>連携ステータス</label>
        <picklist>
            <picklistValues>
                <fullName>未連携</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>連携済</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>社内メモ</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrgName__c</fullName>
        <defaultValue>$User.CompanyName</defaultValue>
        <label>会社名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherText__c</fullName>
        <label>その他</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutputConsumptionTaxAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>消費税額表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputSubtitle__c</fullName>
        <defaultValue>true</defaultValue>
        <label>小計表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputSubtotalReduction1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>値引1後合計出力フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputSubtotalReduction2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>値引2後合計出力フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputTotalAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>合計金額表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutputTotalTaxAmount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>総合計金額表示</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OverrideDepartmentCode__c</fullName>
        <label>部署コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDepartmentName__c</fullName>
        <label>部署名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverrideDepartmentOutputText__c</fullName>
        <label>出力部署テキスト</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentConditionSection__c</fullName>
        <label>支払条件区分</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentConditionText__c</fullName>
        <description>支払条件区分の入力欄</description>
        <label>支払条件テキスト</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>郵便番号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>単価出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrintedDate__c</fullName>
        <label>印刷日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductCodeExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>品目No表示非表示切り替え</description>
        <label>品目No.出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuotationDivision__c</fullName>
        <label>見積区分</label>
        <picklist>
            <picklistValues>
                <fullName>製品</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>サービス</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuotationNameExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>見積名称出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuotationRequestedDateTime__c</fullName>
        <description>Technical field always null used during the linkage from BaaN. (Used to update the Date field)</description>
        <label>見積依頼日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuotationRequestedDate__c</fullName>
        <label>見積依頼日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuotationTypeText__c</fullName>
        <label>見積種別テキスト</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuotationType__c</fullName>
        <label>見積種別</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteExpirationDateTime__c</fullName>
        <description>Technical field always null used during the linkage from BaaN. (Used to update the Date field)</description>
        <label>見積書有効期限時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteExpirationDate_Arbitrarily__c</fullName>
        <label>見積書有効期限（適宜）</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteExpirationDate__c</fullName>
        <label>見積書有効期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteNo_BranchNo_Sync__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>見積No/枝番_連携用</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuoteNo__c</fullName>
        <description>自社内管理の見積番号</description>
        <label>見積No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteValidityPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <label>見積書有効期間</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferenceExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>問い合わせ先出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegisterDateTime__c</fullName>
        <description>Technical field always null used during the linkage from BaaN. (Used to update the Date field)</description>
        <label>登録日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RegisterDate__c</fullName>
        <label>登録日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RegulerPriceCommentExpress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>定価証明書　コメント出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegulerPriceExpress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>定価証明書　出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RegulerPriceSheetIssueDate__c</fullName>
        <label>定価証明書　発行日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RelationAccount_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>送付案内取引先_検索ダイアログ用</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>見積書情報 (取引先_検索ダイアログ用)</relationshipLabel>
        <relationshipName>DestinationAccountDummys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationContact_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>送付案内取引先責任者_検索ダイアログ用</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>見積書情報 (送付案内取引先責任者_検索ダイアログ用)</relationshipLabel>
        <relationshipName>DestinationContactDummys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepresentativeNameExpress__c</fullName>
        <defaultValue>true</defaultValue>
        <label>代表者名出力</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesAreaCode__c</fullName>
        <label>地域コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesArea__c</fullName>
        <label>地域</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAssistantCode__c</fullName>
        <formula>SalesAssistant__r.UserCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>アシスタントコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesAssistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>アシスタント</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsJapanUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AssistantQuotationInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>見積書情報</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesPersonCode__c</fullName>
        <formula>SalesPerson__r.UserCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>営業担当者コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業担当者</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsJapanUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>QuotationInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesPipelineLkup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>営業パイプライン(新)</label>
        <referenceTo>SalesPipeline__c</referenceTo>
        <relationshipLabel>見積書情報</relationshipLabel>
        <relationshipName>QuotationInformation_SalesPipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>系列</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>納入先</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>見積書情報 (納入先)</relationshipLabel>
        <relationshipName>ShipmentQuotationInformations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentAccount_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ShipmentAccount_dummyField</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.CustomerSituation__c</field>
                <operation>equals</operation>
                <value>有効</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>見積書情報 (ShipmentAccount_dummyField)</relationshipLabel>
        <relationshipName>ShipmentAccount_dummyField</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentAddress__c</fullName>
        <label>納入先住所</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentBelong__c</fullName>
        <label>納入先所属</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentCode__c</fullName>
        <label>納入先コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentContact_dummyField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>納入先担当者_検索ダイアログ用</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>見積書情報 (納入先担当者_検索ダイアログ用)</relationshipLabel>
        <relationshipName>QuotationInformations_ShipmentContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipmentDistanceSection__c</fullName>
        <label>納入先距離区分</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentDistanceZone__c</fullName>
        <label>納入先距離ゾーン</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentFax__c</fullName>
        <label>納入先FAX</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShipmentName1__c</fullName>
        <label>納入先名称1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentName2__c</fullName>
        <label>納入先名称2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentName__c</fullName>
        <label>納入先名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentPersonInCharge__c</fullName>
        <label>納入先担当者名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentPhone__c</fullName>
        <label>納入先電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShipmentPost__c</fullName>
        <label>納入先役職</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentPostalCode__c</fullName>
        <label>納入先郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentShortName__c</fullName>
        <label>納入先名（略称）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipmentUndergraduate__c</fullName>
        <label>納入先学部事業所</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubtitleLabel__c</fullName>
        <defaultValue>&apos;小計&apos;</defaultValue>
        <label>小計ラベル</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <label>小計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SubtotalReductionAmount1__c</fullName>
        <label>値引1後合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubtotalReductionAmount2__c</fullName>
        <label>値引2後合計</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>